examples/test/testpolicy13133.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13133
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key13: value46
      key7: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value18
      podSelector:
        matchLabels:
          key41: value7
          key36: value29
          key15: value46
